<resources>
    <string name="app_name">motionlayoutMuha</string>
    <string name="forpic">forpic</string>
    <string name="follow">follow</string>
    <string name="invite">invite</string>
    <string name="posts">posts</string>
    <string name="following">following</string>
    <string name="followers">followers</string>
    <string name="kotee">Kotee</string>
    <string name="kotik">kotik</string>
    <string name="dskafkadshfdsahfjadksfhkjdshf">dskafkadshfdsahfjadksfhkjdshf</string>
</resources>